Fix scrollbar and add hiding

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,10 @@ $font-family-base: 'Montserrat', sans-serif;
 
 @import "~bootstrap/scss/bootstrap";
 
+body {
+    height: 100%;
+}
+
 .scroll-spy {
     position: relative;
     scroll-behavior: smooth;
